tests/pass/test-arith_ops.frac
main() {
  print(1 + 1);
  print(1 - 1);
  print(1 * 3);
  print(4 / 2);
  print(10 % 8);
  print(11 + -1);
  print(11 * -1);

  print(1.2 + 1.3);
  print(1.2 - 1.2);
  print(1.2 * 1.3);
  print(3.9 / 1.3);
  print(1.1 + -1.0);
}
