tests/fail/main_formals.frac
main(int x, int y) {
    print(3);
}
